# Metrics_Miscellany

./: .gitignore  AGENTS.org  CONTRIBUTING.org  Makefile  README.org  metrics_miscellany.org  pyproject.toml  setup.py  tangle.sh
Metrics_Miscellany.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: index.org
docs/automation/: sample_status_log.org  status_log.org
docs/howto/: collaboration_preferences.org  release_checklist.org
metrics_miscellany/: __init__.py
metrics_miscellany/test/: README  test_binary_ops.py  test_factor_regression.py  test_ols_vs_statsmodels.py
